--- a/main.css
+++ b/main.css
@@ -14,6 +14,17 @@ https://www.genialabile.com/css.html
 <!---// STARTLINE & SAY HI //--->
     <style>
 
+        :root {
+            --background-color: #000000;
+            --info-background: #000000;
+            --info-text: #f4f4f4;
+            --borders: #f4f4f4;
+            --posts: #f4f4f4;
+            --spacing: 3rem;
+            --accent: #f4f4f4;
+            --box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        
         html, body {
             background-color: black;
             margin: 0;
