--- a/main.css
+++ b/main.css
@@ -24,7 +24,15 @@ https://www.genialabile.com/css.html
             --accent: #f4f4f4;
             --box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
         }
-        
+        /* Riquadro Informativo */
+        .info {
+            box-shadow: var(--box-shadow);
+            background: var(--info-background);
+            color: var(--info-text);
+            border-radius: 0px; /* Bordi squadrati */
+            padding: var(--spacing);
+            width: 100%; /* Pagina intera */
+
         html, body {
             background-color: black;
             margin: 0;
