Corretto il commento nel file main.css per migliorare la chiarezza

--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-<!---//
+ /* Riquadro<!---//
 # Gen-IA
 Advanced-GPT inspiring multidimensional solutions and unlocking creative potential.
 ---
@@ -13,7 +13,7 @@ https://www.genialabile.com/css.html
 
 <!---// STARTLINE & SAY HI //--->
     <style>
-
+    Informativo */
         :root {
             --background-color: #000000;
             --info-background: #000000;
@@ -112,6 +112,6 @@ https://www.genialabile.com/css.html
         * {
             box-sizing: border-box;
         }
-
+   /* Riquadro
     </style>
 <!---// ENDLINE & SAY BYE //--->
