--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ https://www.genialabile.com/css.html
 <!---// STARTLINE & SAY HI //--->
     <style>
     Informativo */
-        :root {
+        /* Riquadro:root {
             --background-color: #000000;
             --info-background: #000000;
             --info-text: #f4f4f4;
@@ -24,15 +24,15 @@ https://www.genialabile.com/css.html
             --accent: #f4f4f4;
             --box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
         }
-        /* Riquadro Informativo */
+        /* Riquadro Informativo 
         .info {
             box-shadow: var(--box-shadow);
             background: var(--info-background);
             color: var(--info-text);
-            border-radius: 0px; /* Bordi squadrati */
+            border-radius: 0px; /* Bordi squadrati 
             padding: var(--spacing);
-            width: 100%; /* Pagina intera */
-
+            width: 100%; /* Pagina intera 
+            Informativo */
         html, body {
             background-color: black;
             margin: 0;
