--- a/banner.css
+++ b/banner.css
@@ -1,4 +1,4 @@
-<!---//
+   /* Riquadr<!---//
 # Gen-IA
 Advanced-GPT inspiring multidimensional solutions and unlocking creative potential.
 ---
@@ -13,7 +13,8 @@ https://www.genialabile.com/css-banner.html
 
 <!---// STARTLINE & SAY HI //--->
     <style>
-                
+    Informativo */
+   Informativo */  
         #cookie-banner {
             display: flex;
             flex-direction: column;
@@ -78,6 +79,6 @@ https://www.genialabile.com/css-banner.html
         .cookie-bty:hover {
             background-color:#00ff00;
         }
-
+   /* Riquadr
     </style>
 <!---// ENDLINE & SAY BYE //--->
