--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ https://www.genialabile.com/css.html
 
 <!---// STARTLINE & SAY HI //--->
     <style>
-     Informativo */
+    Informativo */
         :root {
             --background-color: #000000;
             --info-background: #000000;
@@ -24,7 +24,17 @@ https://www.genialabile.com/css.html
             --accent: #f4f4f4;
             --box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
         }
-      
+        
+        .info {
+            box-shadow: var(--box-shadow);
+            background: var(--info-background);
+            color: var(--info-text);
+            border-radius: 0px; 
+            padding: var(--spacing);
+            width: 100%;
+            
+        }
+        Informativo */
         html, body {
             background-color: black;
             margin: 0;
