--- a/card.css
+++ b/card.css
@@ -9,7 +9,7 @@ This project is no longer available as open-source. Updated to 10 Jan 2025.
 Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 ---
 https://www.genialabile.com/card.css
-//-->
+//--*/
 
  /*---// STARTLINE & SAY HI //--- */ 
     <style>
