Rinominati i selettori CSS per migliorare la coerenza e la leggibilità del codice

--- a/main.css
+++ b/main.css
@@ -106,12 +106,12 @@ https://www.genialabile.com/main.css
             text-decoration: underline; 
         }
 
-        .imp-pless a {
+        .imp-l a {
             color:  #00bbff; 
             text-decoration: none;
         }
 
-        .imp-pless a:hover {
+        .imp-l a:hover {
             color: #00ff00; 
             text-decoration: underline; 
         }
