--- a/card.css
+++ b/card.css
@@ -33,7 +33,8 @@ https://www.genialabile.com/card.css
 
         .card-image {
             width: 70px; 
-            height: 70px; 
+            height: 70px;
+            max-width: 100%; 
             border-radius: 50%;
             object-fit: cover; 
         }
