--- a/main.css
+++ b/main.css
@@ -14,6 +14,26 @@ https://www.genialabile.com/main.css
  /*---// STARTLINE & SAY HI //--- */
     <style>
     
+        :root {
+            background-color: #000000;
+            info-background: #000000;
+            info-text: #f4f4f4;
+            borders: #f4f4f4;
+            posts: #f4f4f4;
+            spacing: 3rem;
+            accent: #f4f4f4;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        
+        .info {
+            box-shadow: var(--box-shadow);
+            background: var(--info-background);
+            color: var(--info-text);
+            border-radius: 0px; 
+            padding: var(--spacing);
+            width: 100%;
+            
+        }
         html, body {
             background-color: black;
             margin: 0;
@@ -127,27 +147,6 @@ https://www.genialabile.com/main.css
 
         * {
             box-sizing: border-box;
-        }
-
-        :root {
-            --background-color: #000000;
-            --info-background: #000000;
-            --info-text: #f4f4f4;
-            --borders: #f4f4f4;
-            --posts: #f4f4f4;
-            --spacing: 3rem;
-            --accent: #f4f4f4;
-            --box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        
-        .info {
-            box-shadow: var(--box-shadow);
-            background: var(--info-background);
-            color: var(--info-text);
-            border-radius: 0px; 
-            padding: var(--spacing);
-            width: 100%;
-            
         }
 
   
