Ristrutturazione della formattazione del footer e della politica sui cookie per migliorare la leggibilità e l'organizzazione del codice

--- a/main.css
+++ b/main.css
@@ -160,5 +160,9 @@ without prior written authorization.
             text-decoration: underline; 
         }
 
+        .txt-mini {
+            font-size: 0.7rem;
+        }
+
    /* </style> */
  /*---// ENDLINE & SAY BYE //--- */
