Modifica della classe .txt-mini per applicare la formattazione del font-size agli elementi <p> all'interno

--- a/main.css
+++ b/main.css
@@ -160,7 +160,7 @@ without prior written authorization.
             text-decoration: underline; 
         }
 
-        .txt-mini {
+        .txt-mini p {
             font-size: 0.7rem;
         }
 
