--- a/main.css
+++ b/main.css
@@ -114,23 +114,16 @@ without prior written authorization.
             margin-bottom: 1rem;
         }
 
-        p.txt-mini {
-            font-size: 0.7rem;
-            font-weight: normal;
-        }
-
         a {
             text-decoration: none; 
-            color: white;
+            color: #fffff;
             font-weight: bold; 
         }
 
         a:hover {
             color: #00ff00; 
             text-decoration: none;
-            /* 
-            text-decoration: underline; /
-            */
+            text-decoration: underline;
         }
 
         .important-p a {
@@ -145,9 +138,10 @@ without prior written authorization.
         }
 
         .imp-p a {
-            color:  #ffff; 
+            color:  #fffff;
+            font-size: 0.7rem; 
             text-decoration: none;
-            font-weight: bold; 
+            font-weight: normal; 
         }
 
         .imp-p a:hover {
