--- a/main.css
+++ b/main.css
@@ -156,6 +156,7 @@ without prior written authorization.
         .imp-l a {
             color:  #00bbff; 
             text-decoration: none;
+            font-weight: normal;
         }
 
         .imp-l a:hover {
