Aggiorna il margine e il padding del corpo in index.html e modifica le variabili di spacing e background in main.css

--- a/main.css
+++ b/main.css
@@ -35,9 +35,10 @@ without prior written authorization.
             --info-text: #f4f4f4;
             --borders: #f4f4f4;
             --posts: #f4f4f4;
-            --spacing: 3rem;
+            --spacing: 30rem;
             --accent: #f4f4f4;
             --box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            --padding: 0;
         }
         
         .info {
@@ -49,8 +50,9 @@ without prior written authorization.
             width: 100%;
             
         }
+
         html, body {
-            background-color: black;
+            background-color: var (var(--info-background));
             margin: 0;
             padding: 0;
             height: 100%;
@@ -67,9 +69,10 @@ without prior written authorization.
         main {
             width: 100%;
             max-width: 100%;
-            color: #f4f4f4;
+            color: var (var(--info-text));
             margin: 0 auto;
             padding: var(--spacing);
+            text-align: left;
         }
 
         footer {
