Riduci il padding del main in main.css e rimuovi il commento sul max-width

--- a/main.css
+++ b/main.css
@@ -60,16 +60,16 @@ without prior written authorization.
 
         @media screen and (min-width: 1024px) {
         main {
-            max-width: 1200px; 
-            padding: 5rem;     
-            margin: 0 auto;   
+            max-width: 1200px;    
+            margin: 0 auto;
+            padding: 1rem; 
             }
         }
 
         main {
             width: 100%;
-            max-width: 100%;
-            color: var (--info-text);
+            max-width: /*100%;*/
+            color: var(--info-text);
             margin: 0 auto;
             padding: var(--spacing);
             text-align: left;
