--- a/main.css
+++ b/main.css
@@ -68,7 +68,7 @@ without prior written authorization.
 
         main {
             width: 100%;
-            max-width: /*100%;*/
+            max-width: 1200px; /*100%;*/
             color: var(--info-text);
             margin: 0 auto;
             padding: var(--spacing);
