--- a/banner.css
+++ b/banner.css
@@ -25,6 +25,16 @@ without prior written authorization.
  /*---// STARTLINE & SAY HI //--- */
     /* <style> */
 
+        .info {
+            box-shadow: var(--box-shadow);
+            background: var(--info-background);
+            color: var(--info-text);
+            border-radius: 0px; 
+            padding: var(--spacing);
+            width: 100%;
+            
+        }
+        
         #cookie-banner {
             display: flex;
             flex-direction: column;
