--- a/main.css
+++ b/main.css
@@ -89,6 +89,9 @@ without prior written authorization.
             color: var(--info-text);
             margin-top: 3rem;
             margin: 0;
+            box-sizing: border-box;
+            margin-top: var(--spacing);
+             margin-bottom: var(--spacing);
         }
 
         * {
