--- a/main.css
+++ b/main.css
@@ -25,11 +25,21 @@ without prior written authorization.
  /*---// STARTLINE & SAY HI //---*/
     /*< style> */
     
-     /*
-     NOTE: body + body.visible in-pages, fixed loading issue
-     */
-     
-    :root {
+        /*
+        NOTA: body + body.visible in-pages, fixed loading issue
+        */
+    
+        .info {
+            box-shadow: var(--box-shadow);
+            background: var(--info-background);
+            color: var(--info-text);
+            border-radius: 0px; 
+            padding: var(--spacing);
+            width: 100%;
+            
+        }
+
+        :root {
             --background-color: #000000;
             --info-background: #000000;
             --info-text: #f4f4f4;
