--- a/main.css
+++ b/main.css
@@ -49,7 +49,7 @@ without prior written authorization.
             width: 100%;
             
         }
-        html, body {
+        html{
             background-color: var(--background-color);
             margin: 0;
             padding: 0;
