--- a/main.css
+++ b/main.css
@@ -37,7 +37,7 @@ without prior written authorization.
             --posts: #f4f4f4;
             --spacing: 3rem;
             --accent: #f4f4f4;
-            --box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            --box-shadow: 0px 4px 8px #00000000;
         }
         
         .info {
