--- a/main.css
+++ b/main.css
@@ -66,7 +66,7 @@ without prior written authorization.
 
         main {
             width: 100%;
-            max-width: 1024px; /* 100%;*/
+            max-width: 100%;
             color: var(--info-text);
             margin: 0 auto;
             padding: var(--spacing);
