Aggiorna URL nei file migliora la gestione del footer e del CSS ————————2PT

--- a/card.css
+++ b/card.css
@@ -18,7 +18,7 @@ without prior written authorization.
 -------------------------------------------------------------------------------
 
 # Version: v2.1
-# URL: https://www.genialabile.com/card.css
+# URL: https://genialabile.com/card.css
 ===============================================================================
 */
 
