--- a/banner.css
+++ b/banner.css
@@ -18,7 +18,7 @@ without prior written authorization.
 -------------------------------------------------------------------------------
 
 # Version: v2.1
-# URL: https://www.genialabile.com/banner.css
+# URL: https://genialabile.com/banner.css
 ===============================================================================
 */
 
@@ -70,24 +70,3 @@ without prior written authorization.
         .cookie-btn:hover {
             background-color:#ff00ff;
         }
-
-        .cookie-bty {
-            background-color: #f4f4f4; 
-            color: #000000;
-            border: none;
-            padding: 0.3rem 0.6rem;
-            margin: 0.5rem;
-            font-size: 1rem;
-            font-weight: bold;
-            cursor: pointer;
-            border-radius: 3px;
-            box-shadow: 0px 4px 8px #242424;
-            transition: background-color 0.3s ease;
-        }
-        
-        .cookie-bty:hover {
-            background-color:#00ff00;
-        }
-
-    /* </style> */
- /*---// ENDLINE & SAY BYE //--- */
