--- a/master.css
+++ b/master.css
@@ -18,7 +18,7 @@ without prior written authorization.
 -------------------------------------------------------------------------------
 
 # Version: v2.1
-# URL: https://www.genialabile.com/main.css
+# URL: https://genialabile.com/main.css
 ===============================================================================
 */
 
