--- a/master.css
+++ b/master.css
@@ -35,7 +35,7 @@ without prior written authorization.
             --info-text: #f4f4f4;
             --borders: #f4f4f4;
             --posts: #f4f4f4;
-            --spacing: 3rem;
+            --spacing: 2rem 2%;
             --accent: #f4f4f4;
             --box-shadow: 0px 4px 8px #00000000;
         }
@@ -96,7 +96,7 @@ without prior written authorization.
             background-color: var(--info-background);
             color: var(--info-text);
             margin: 0 auto;
-            margin-top: 12rem;
+            margin-top: 9rem;
             margin-bottom: 3rem;
         }
 
