TESTO MANCANTE RIPRISTINATO——— TEST RIMOZIONE REDIRECT SSL—— agiunta topper sp

--- a/master.css
+++ b/master.css
@@ -35,7 +35,8 @@ without prior written authorization.
             --info-text: #f4f4f4;
             --borders: #f4f4f4;
             --posts: #f4f4f4;
-            --spacing: 3rem 2%;
+            --spacing: 3rem 1.5%;
+            ---space-top: 6rem 1.%;5
             --accent: #f4f4f4;
             --box-shadow: 0px 4px 8px #00000000;
         }
@@ -76,7 +77,7 @@ without prior written authorization.
         @media screen and (min-width: 1024px) {
         main {
             max-width: 1200px; 
-            padding: 5rem;  /* Assicurati che questo valore sia corretto era 50 */   
+            padding: 66rem;  /* Assicurati che questo valore sia corretto era 50 poi 3 adesso 66 */   
             margin: 0 auto;   
             }
         }
@@ -87,6 +88,7 @@ without prior written authorization.
             color: var(--info-text);
             margin: 0 auto;
             padding: var(--spacing);
+            margin-top: var(---space-top;)
         }
 
         footer {
