--- a/master.css
+++ b/master.css
@@ -35,8 +35,8 @@ without prior written authorization.
             --info-text: #f4f4f4;
             --borders: #f4f4f4;
             --posts: #f4f4f4;
-            --spacing: 3rem 1.5%;
-            ---space-top: 6rem 1.%;5
+            --spacing: 3rem 9%;
+            ---space-top: 3rem 3%;
             --accent: #f4f4f4;
             --box-shadow: 0px 4px 8px #00000000;
         }
@@ -88,7 +88,7 @@ without prior written authorization.
             color: var(--info-text);
             margin: 0 auto;
             padding: var(--spacing);
-            margin-top: var(---space-top;)
+            padding-top: var(---space-top;)
         }
 
         footer {
