--- a/master.css
+++ b/master.css
@@ -37,6 +37,7 @@ without prior written authorization.
             --posts: #f4f4f4;
             --spacing: 3rem 9%;
             ---space-top: 3rem 3%;
+            --margin-top: 3rem;
             --accent: #f4f4f4;
             --box-shadow: 0px 4px 8px #00000000;
         }
@@ -89,6 +90,7 @@ without prior written authorization.
             margin: 0 auto;
             padding: var(--spacing);
             padding-top: var(---space-top;)
+            margin-top: var(--margin-top);
         }
 
         footer {
