--- a/master.css
+++ b/master.css
@@ -36,7 +36,7 @@ without prior written authorization.
             --borders: #f4f4f4;
             --posts: #f4f4f4;
             --spacing: 3rem 9%;
-            ---space-top: 3rem %;
+            ---space-top: 3rem 3%;
             --margin-top: 3rem;
             --accent: #f4f4f4;
             --box-shadow: 0px 4px 8px #00000000;
