Aggiorna le variabili di spacing in master.css e aggiungi margini in contacts.html per migliorare il layout

--- a/master.css
+++ b/master.css
@@ -35,9 +35,7 @@ without prior written authorization.
             --info-text: #f4f4f4;
             --borders: #f4f4f4;
             --posts: #f4f4f4;
-            --spacing: 3rem 9%;
-            ---space-top: 3rem 3%;
-            --margin-top: 3rem;
+            --spacing: 2rem 2%;
             --accent: #f4f4f4;
             --box-shadow: 0px 4px 8px #00000000;
         }
@@ -78,7 +76,7 @@ without prior written authorization.
         @media screen and (min-width: 1024px) {
         main {
             max-width: 1200px; 
-            padding: var(--spacing);  /* Assicurati che questo valore sia corretto era 50 poi 3 adesso 66 */   
+            padding: 6rem;  /* Assicurati che questo valore sia corretto era 50 */   
             margin: 0 auto;   
             }
         }
@@ -89,8 +87,6 @@ without prior written authorization.
             color: var(--info-text);
             margin: 0 auto;
             padding: var(--spacing);
-            padding-top: var(---space-top;
-            margin-top: var(--margin-top);
         }
 
         footer {
